test/compile-errors/wrong-number-type-args.crow
magic opt ?out(a opt ?in)
	todo

test opt ?out(a opt ?in)
	a magic<?out>
